Removed unused imports and depricated use of new integer(1)